--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
     <title>Login Page</title>
 </head>
 <body>
-    <form>
+    <form action="http://localhost:2000/user/signup" method="post">
         <label for="name">Name: </label>
         <input type="text" name="name" id="name" required>
         <label for="email">Email: </label>
