--- a/views/login.html
+++ b/views/login.html
@@ -6,15 +6,18 @@
     <title>Login Page</title>
 </head>
 <body>
-    <form action="http://localhost:2000/user/signup" method="post">
+    <form id ="myform" action="/">
         <label for="name">Name: </label>
         <input type="text" name="name" id="name" required>
         <label for="email">Email: </label>
         <input type="email" name="email" id="email" required>
-        <label for="pass">Password</label>
+        <label for="pass">Password: </label>
         <input type="text" name="pass" id="pass">
         <input type="submit" value="SUBMIT">
     </form>
     <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"
+        integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
