//-Correcting Login Issue-

--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <style>
+        .redText{
+            font-family: 'Times New Roman', Times, serif;
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
