T5: Made the backend api of the login

--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,13 @@
     <style>
         .redText{
             font-family: 'Times New Roman', Times, serif;
+            font-size: medium;
             color: red;
+        }
+        .yellowText{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: large;
+            color: rgb(35, 41, 3);
         }
     </style>
 </head>
