Fixing Navigation to Login Page after Signup

--- a/views/signup.html
+++ b/views/signup.html
@@ -12,7 +12,7 @@
         <label for="email">Email: </label>
         <input type="email" name="email" id="email" required>
         <label for="pass">Password: </label>
-        <input type="text" name="pass" id="pass">
+        <input type="password" name="pass" id="pass">
         <input type="submit" value="SUBMIT">
     </form>
     <a href="login.html">Existing User - Login</a>
