--- a/views/login.html
+++ b/views/login.html
@@ -24,11 +24,12 @@
         <label for="email">Email: </label>
         <input type="email" name="email" id="email" required>
         <label for="pass">Password: </label>
-        <input type="text" name="pass" id="pass">
+        <input type="password" name="pass" id="pass">
         <input type="submit" value="SUBMIT">
     </form>
     <a href="signup.html">New User - Signup Here</a>
     <div id="myDiv"></div>
+    
     <script src="mainLogin.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"
         integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
