T7:Daily Expense App features - Expese Add,Delete

--- a/views/login.html
+++ b/views/login.html
@@ -8,13 +8,13 @@
     <style>
         .redText{
             font-family: 'Times New Roman', Times, serif;
-            font-size: medium;
+            font-size: larger;
             color: red;
         }
         .yellowText{
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-size: large;
-            color: rgb(35, 41, 3);
+            color: rgb(91, 91, 34)
         }
     </style>
 </head>
