Fixed: Delete Exp issue for Newly created expenses

--- a/views/expensePage.html
+++ b/views/expensePage.html
@@ -17,6 +17,7 @@
         <select name="cat" id="category">
             <option>Food</option>
             <option>Petrol</option>
+            <option>Movie</option>
             <option>Bill Payment</option>
             <option id="otherOpt">Other</option>
         </select>
