--- a/views/expensePage.html
+++ b/views/expensePage.html
@@ -23,6 +23,8 @@
         </select>
         <input type="submit" value="ADD Expense">
     </form>
+    <button id="rzp-button1">Buy Premium</button>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <hr>
     <ul id="elist">
         <!-- Expenses Here -->
