T14: Forgot Pass? Integrating Mailing service

--- a/views/login.html
+++ b/views/login.html
@@ -28,6 +28,7 @@
         <input type="submit" value="SUBMIT">
     </form>
     <a href="signup.html">New User - Signup Here</a>
+    <a href="forgotpass.html">Forgot Password</a>
     <div id="myDiv"></div>
     
     <script src="mainLogin.js"></script>
