T16: Report Generation Frontend (Premium Feature)

--- a/views/expensePage.html
+++ b/views/expensePage.html
@@ -19,12 +19,14 @@
             <option>Petrol</option>
             <option>Movie</option>
             <option>Bill Payment</option>
+            <option>Income</option>
             <option id="otherOpt">Other</option>
         </select>
         <input type="submit" value="ADD Expense">
     </form>
     <button id="rzp-button1">Buy Premium</button>
     <button id="ldrbrd">Show Leaderboard</button>
+    <a href="./premExpensePage.html">See daily/weekly/monthly Expense Report</a>
     <hr>
 
     <h1><b>Expenses</b></h1>
