--- a/views/expensePage.html
+++ b/views/expensePage.html
@@ -26,7 +26,9 @@
     </form>
     <button id="rzp-button1">Buy Premium</button>
     <button id="ldrbrd">Show Leaderboard</button>
-    <a href="./premExpensePage.html">See daily/weekly/monthly Expense Report</a>
+    <button id="dwnld">Download</button>
+    <button id="report">See daily/weekly/monthly Expense Report</button>
+    <!-- <a href="./expenseReportPrem.html">See daily/weekly/monthly Expense Report</a> -->
     <hr>
 
     <h1><b>Expenses</b></h1>
