T17:Report Generation Backend (Premium Feature)

--- a/views/expensePage.html
+++ b/views/expensePage.html
@@ -38,6 +38,10 @@
     </ul>
     
     <div id="ldrdiv"></div>
+    <div id="dwnlddiv">
+        <h2>Download list</h2>
+        <ul id="reportList"></ul>
+    </div>
 
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="mainExpense.js"></script>
