--- a/views/expenseReportPrem.html
+++ b/views/expenseReportPrem.html
@@ -12,6 +12,7 @@
 
         table {
             margin-inline: auto;
+            padding: auto;
         }
 
         table,
@@ -27,18 +28,19 @@
         .displayNone {
             display: none;
         }
+        th{
+            padding-inline: 10px;
+        }
     </style>
 </head>
 
 <body>
-    <!-- <form id="reportTypeForm"> -->
     <label for="reportType">Select</label>
     <select name="reportType" id="reportType">
         <option>Daily</option>
         <option>Weekly</option>
         <option>Monthly</option>
     </select>
-    <!-- <button type="submit">Show</button> -->
     </form>
     <div id="dailyTableDiv">
         <h3>Daily Expense</h3>
@@ -52,30 +54,6 @@
                 </tr>
             </thead>
             <tbody id="dailyBody">
-                <tr>
-                    <td>05/10/2023</td>
-                    <td>Book</td>
-                    <td>Shopping</td>
-                    <td>200</td>
-                </tr>
-                <tr>
-                    <td>07/10/2023</td>
-                    <td>Coffee</td>
-                    <td>Shopping</td>
-                    <td>250</td>
-                </tr>
-                <tr>
-                    <td>11/10/2023</td>
-                    <td>Fuel</td>
-                    <td>Fuel</td>
-                    <td>800</td>
-                </tr>
-                <tr>
-                    <td>14/10/2023</td>
-                    <td>Choclate</td>
-                    <td>Shopping</td>
-                    <td>60</td>
-                </tr>
             </tbody>
         </table>
     </div>
@@ -85,19 +63,11 @@
         <table id="weekyTable">
             <thead>
                 <tr>
-                    <th>Week</th>
+                    <th>Date</th>
                     <th>Expense</th>
                 </tr>
             </thead>
             <tbody id="weeklyBody">
-                <tr>
-                    <td>01/10/2023</td>
-                    <td>450</td>
-                </tr>
-                <tr>
-                    <td>08/10/2023</td>
-                    <td>860</td>
-                </tr>
             </tbody>
         </table>
     </div>
@@ -106,47 +76,20 @@
         <table id="mothlyTable">
             <thead>
                 <tr>
-                    <th>Month</th>
+                    <th>Date</th>
                     <th>Expense</th>
                 </tr>
             </thead>
             <tbody id="monthlyBody">
-                <tr>
-                    <td>October</td>
-                    <td>1310</td>
-                </tr>
             </tbody>
         </table>
     </div>
     <button id="backbtn">Back</button>
 
 </body>
-<script>
-    document.getElementById("dailyTableDiv").classList = "";
-    document.getElementById("weeklyTableDiv").classList = "displayNone";
-    document.getElementById("monthlyTableDiv").classList = "displayNone";
+<script src = 'expenseReportPrem.js'></script>
 
-    document.getElementById("reportType").addEventListener("change", (e) => {
-        if (e.target.value == "Daily") {
-            document.getElementById("dailyTableDiv").classList = "";
-            document.getElementById("weeklyTableDiv").classList = "displayNone";
-            document.getElementById("monthlyTableDiv").classList = "displayNone";
-        }
-        else if (e.target.value == "Weekly") {
-            document.getElementById("weeklyTableDiv").classList = "";
-            document.getElementById("dailyTableDiv").classList = "displayNone";
-            document.getElementById("monthlyTableDiv").classList = "displayNone";
-        }
-        else if (e.target.value == "Monthly") {
-            document.getElementById("monthlyTableDiv").classList = "";
-            document.getElementById("weeklyTableDiv").classList = "displayNone";
-            document.getElementById("dailyTableDiv").classList = "displayNone";
-        }
-
-    })
-    document.getElementById('backbtn').onclick = e => window.location = "./expensePage.html";
-
-</script>
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"
+    integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </html>
