T18-Paginating the expenses

--- a/views/expensePage.html
+++ b/views/expensePage.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Expenses</title>
+    <style>
+        #pageNumDiv {
+            display: flex;
+            justify-content: center;
+            background-color: #9b93a240;
+        }
+    </style>
 </head>
 
 <body>
@@ -36,7 +43,8 @@
     <ul id="elist" style="padding-left: 50px;">
         <!-- Expenses Here -->
     </ul>
-    
+    <div id="pageNumDiv"></div>
+
     <div id="ldrdiv"></div>
     <div id="dwnlddiv">
         <h2>Download list</h2>
