T19:  Dynamic pagination - Initial commit

--- a/views/expensePage.html
+++ b/views/expensePage.html
@@ -43,6 +43,16 @@
     <ul id="elist" style="padding-left: 50px;">
         <!-- Expenses Here -->
     </ul>
+    <div id="expPrPgDiv"> 
+        <label for="expensesPerPage">Number of expenses per page: </label>
+        <select name="expensesPerPage" id="expPrPg">
+            <option>10</option>
+            <option>5</option>
+            <option>20</option>
+            <option>50</option>
+            <option>100</option>
+        </select>
+    </div>
     <div id="pageNumDiv"></div>
 
     <div id="ldrdiv"></div>
